--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -6,19 +6,77 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%- title %></title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" >
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
 <body>
   <header class="header">
-    這是 header
+      <div class="logo">
+          <a href="index.html">logo</a>
+      </div>
+        <ul class="menu">
+          <li><a class="fs-lh-6" href="product.html">系統鏡框</a></li>
+          <li><a class="fs-lh-6  ml-6" href="location.html">門市據點</a></li>
+          <li><a class="fs-lh-6  ml-6" href="blog.html">部落格</a></li>
+          <li><a class="fs-lh-6  ml-6" href="faq.html">常見問題</a></li>
+        </ul>
   </header>
 
   <%- contents %>
 
   <footer class="footer">
-    footer
+    <div class="container">
+        <div class="footerList">
+          <div class="linkList">
+            <ul class="menuList fs-lh-4">
+              <li><a href="index.html">首頁</a></li>
+              <li><a class="ml-6"  href="product.html">系列鏡框</a></li>
+              <li><a class="ml-6"  href="location.html">門市據點</a></li>
+              <li><a class="ml-6"  href="blog.html">部落格</a></li>
+              <li><a class="ml-6"  href="faq.html">常見問題</a></li>
+            </ul>
+            <ul class="contactSend">
+              <li>
+                <div class="tell">
+                  <a href="#">tell</a>
+                </div>
+                <a class="fs-lh-5" href="#">0800-000-000</a>
+              </li>
+              <li>
+                <div class="email">
+                  <a href="#">email</a>
+                </div>
+                <a class="fs-lh-5" href="#">glasses@business.com</a>
+              </li>
+            </ul>
+          </div>
+          <ul class="contactList">
+            <li><a class="link fbLink" href="#">Fackbook</a></li>
+            <li><a class="link igLink" href="#">IG</a></li>
+            <li><a class="link lineLink" href="#">LINE</a></li>
+          </ul>
+        </div>
+      <div class="footer-copyright">
+        <div>
+          <p class="fs-lh-4">Copyright © 2020 Glasses.All rights reserved.</p>
+        </div>
+        <ul>
+          <li>
+            <a href="#">隱私權政策</a>
+          </li>
+          <li>
+            <a href="#">服務條款</a>
+          </li>
+        </ul>
+      </div>
+      </div>
+      
   </footer>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
 </body>
