--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -1,23 +1,13 @@
-$color: #00cc99;
+@import "reset";
+@import "base";
+@import "mixin";
+@import "grid";
 
-.header {
-  height: 200px;
-  background-color: #00cc99;
-}
+/* 相關頁面 */
+@import "pages/index";
+// @import "pages/product";
+@import "pages/location";
+// @import "pages/blog";
+@import "pages/faq";
 
-.footer {
-  height: 200px;
-  background-color: #00cc99;
-}
 
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  display: flex;
-  transition: all 0.5s;
-  &:hover {
-    width: 200px;
-    background-color: $color;
-  }
-}
