--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -1,6 +1,8 @@
 .container {
-    max-width: 1110px;
+    max-width: 1100px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
     @include Pad(){
         max-width: 690px;
     }
