--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -29,7 +29,17 @@ $ml-8: $ml-base * 8;
 $ml-9: $ml-base * 9;
 
 /* 特別間距 */
-/* 字型大小及文字行高 */
+/* 字型大小 */
+$font-size-base: 1rem;
+$fz-1: $font-size-base * 0.875;
+$fz-2: $font-size-base * 1.125;
+$fz-3: $font-size-base * 1.5;
+$fz-4: $font-size-base * 2.0625;
+$fz-5: $font-size-base * 2.25;
+$fz-6: $font-size-base * 3;
+$fz-7: $font-size-base * 4;
+$fz-8: $font-size-base * 4.5;
+
 .fs-lh-1{
     font-size: 64px;
     line-height: 96px;
