--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -5,7 +5,7 @@
 
 /* 相關頁面 */
 @import "pages/index";
-// @import "pages/product";
+@import "pages/product";
 @import "pages/location";
 // @import "pages/blog";
 @import "pages/faq";
