--- a/app/assets/style/pages/_index.scss
+++ b/app/assets/style/pages/_index.scss
@@ -1,13 +1,13 @@
 .container {
-    max-width: 1100px;
+    max-width: 1140px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
     @include Pad(){
-        max-width: 690px;
+        max-width: 720px;
     }
     @include phone(){
-        max-width: 345px;
+        max-width: 375px;
     }
 }
 .header{
@@ -430,6 +430,7 @@
             justify-content: center;
             align-items: center;
             opacity:0.5;
+            margin-left: 30px;
             @include Pad(){
                 width: 330px;
                 height: 278px;
