--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -19,7 +19,7 @@
           <a href="index.html">logo</a>
       </div>
         <ul class="menu">
-          <li><a class="fs-lh-6" href="product.html">系統鏡框</a></li>
+          <li><a class="fs-lh-6" href="product-optical.html">系統鏡框</a></li>
           <li><a class="fs-lh-6  ml-6" href="location.html">門市據點</a></li>
           <li><a class="fs-lh-6  ml-6" href="blog.html">部落格</a></li>
           <li><a class="fs-lh-6  ml-6" href="faq.html">常見問題</a></li>
